--- a/.github/workflows/index.html
+++ b/.github/workflows/index.html
@@ -1,10 +1,42 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Greeting</title>
-</head>
+    <title>Hi Omar</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            height: 100vh;
+            background: linear-gradient(135deg, #667eea, #764ba2);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-family: 'Segoe UI', sans-serif;
+        }
 
+        h1 {
+            color: white;
+            font-size: 4rem;
+            animation: fadeInUp 2s ease-out;
+            background: linear-gradient(90deg, #f6d365, #fda085);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+        }
+
+        @keyframes fadeInUp {
+            from {
+                opacity: 0;
+                transform: translateY(30px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+    </style>
+</head>
 <body>
-    <h1>Hi Omar</h1>
+    <h1>Hi Omar 👋</h1>
 </body>
 </html>
