--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         @keyframes typing {
             from { width: 0 }
-            to { width: 9ch } /* 9 characters: "Hi Omar 👋" */
+            to { width: 9ch } /* 9 characters: "Hi Omar" */
         }
 
         @keyframes blink {
