--- a/index.html
+++ b/index.html
@@ -36,6 +36,6 @@
     </style>
 </head>
 <body>
-    <div class="typewriter">Hi Omar 👋</div>
+    <div class="typewriter">Hi Omar</div>
 </body>
 </html>
