--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         @keyframes typing {
             from { width: 0 }
-            to { width: 8ch } /* 8 characters: "Hi Ema ❤️ " */
+            to { width: 22ch }
         }
 
         @keyframes blink {
