--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hi Ema</title>
+    <title>Hi Omar</title>
     <style>
         body {
             background-color: #0f0f0f;
@@ -21,12 +21,12 @@
             white-space: nowrap;
             overflow: hidden;
             width: 0;
-            animation: typing 2.5s steps(8, end) forwards, blink 0.8s infinite;
+            animation: typing 3s steps(10, end) forwards, blink 0.8s infinite;
         }
 
         @keyframes typing {
             from { width: 0 }
-            to { width: 22ch }
+            to { width: 9ch } /* 9 characters: "Hi Omar" */
         }
 
         @keyframes blink {
@@ -36,6 +36,6 @@
     </style>
 </head>
 <body>
-    <div class="typewriter">Good Mornning Ema ❤️ </div>
+    <div class="typewriter">Hi Omar</div>
 </body>
 </html>
